--- a/en/edit-modes/README.html
+++ b/en/edit-modes/README.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 
-Sanny Builder supports many games and platforms and so there is a predefined configuration for each supported game called an **edit mode**. 
+Sanny Builder supports many games and platforms and so there is a predefined configuration for each supported game called an **edit mode**.
 
 Edit modes supply Sanny Builder with the following information:
 
@@ -25,7 +25,7 @@ The file `modes.xml` is open for modification and extension, and users can creat
 
 `modes.xml` is a file in the XML format and can be changed in any text editor. It defines the available modes.
 
-The root node is `&lt;modes>` and it has no attributes. The file can only have one root node. 
+The root node is `&lt;modes>` and it has no attributes. The file can only have one root node.
 
 Each edit mode is a child node of `&lt;modes>` beginning with the opening tag `&lt;mode>` and ending with the closing tag `&lt;/mode>`. The `&lt;mode>` element has both mandatory and optional attributes as outlined below. The content of the `&lt;mode>` is a set of specific tags (properties) defining paths to directories or files.
 
@@ -39,7 +39,7 @@ A valid value for this attribute is a unique series of characters not used for a
 
 #### extends
 
-A mode can extend another mode (the parent) to reduce the number of duplicated properties. It is helpful for different versions of a game where most of the configuration is the same except for a few properties. The parent can also extend another mode. 
+A mode can extend another mode (the parent) to reduce the number of duplicated properties. It is helpful for different versions of a game where most of the configuration is the same except for a few properties. The parent can also extend another mode.
 
 When a property is missing Sanny Builder recursively traverses all parent modes trying to find the property.
 
@@ -254,9 +254,9 @@ Sanny Builder offers many different modes and their number may vary from version
 </tbody>
 </table>
 
-The naming schema defines the way of describing the opcodes. The c_ommunity_ schema has the names randomly guessed over the years, such as `actor` or `thread`. The _Rockstar_ schema has the original taxonomy used by the game developers (e.g. `char` or `script`) that is consistent with the game's inner structures.  
+The naming schema defines the way of describing the opcodes. The _community_ schema has the names randomly guessed over the years, such as `actor` or `thread`. The _Rockstar_ schema has the original taxonomy used by the game developers (e.g. `char` or `script`) that is consistent with the game's inner structures.
 
-The parameters order defines the way of arranging the opcode parameters. In the _custom_ order the parameter with the higher index may go earlier in the script. This is applicable to community opcode descriptions. The _original _order have all parameters arranged from the smallest index to the largest index. This goes with the Rockstar schema to make scripts look like they are meant to be by the developers.
+The parameters order defines the way of arranging the opcode parameters. In the _custom_ order the parameter with the higher index may go earlier in the script. This is applicable to community opcode descriptions. The _original_ order have all parameters arranged from the smallest index to the largest index. This goes with the Rockstar schema to make scripts look like they are meant to be by the developers.
 
 ## Selecting a mode
 
