fixed img `edit_modes.png`

--- a/en/edit-modes/README.html
+++ b/en/edit-modes/README.html
@@ -263,7 +263,7 @@ The parameters order defines the way of arranging the opcode parameters. In the 
 To change the mode, click at the right bottom corner of the Sanny Builder's main window. A list of the available modes will appear. As you click the mode name Sanny Builder makes all necessary adjustments and you may continue working immediately.
 
 :::center
-![](../../../img/assets/edit_modes.png)
+![](../img/edit_modes.png)
 :::
 
 To select the mode using CLI run Sanny Builder with the `--mode` [option](../editor/cli.md#mode). To select a default mode for the game use the `--game` [option](../editor/cli.md#game).
