--- a/es/edit-modes/README.html
+++ b/es/edit-modes/README.html
@@ -263,7 +263,7 @@ El orden de los parámetros define la forma de organizar los parámetros del opc
 Para cambiar el modo, haga clic en la esquina inferior derecha de la ventana principal de Sanny Builder. Aparecerá una lista de los modos disponibles. Al hacer clic en el nombre del modo, Sanny Builder realiza todos los ajustes necesarios y puede continuar trabajando de inmediato.
 
 :::center
-![](../../../img/assets/edit_modes.png)
+![](../img/edit_modes.png)
 :::
 
 Para seleccionar el modo usando el CLI, ejecute Sanny Builder con la [opción](../editor/cli.md#mode) `--mode`. Para seleccionar un modo predeterminado para el juego, use la [opción](../editor/cli.md#game) `--game`.
